# mtk-openwrt-feeds

./: Readme.md
25.12/patches-base/: 1100-image-mediatek-filogic-add-necessary-packages-for-Mediatek-RFBs.patch  1131-image-mediatek-filogic-add-mt7987a-rfb-support.patch  1132-image-mediatek-filogic-add-bananapi-bpi-r4-lite-support.patch  1140-image-mediatek-filogic-mt7988a-rfb-01-remove-2p5g-phy-firmware-for-internal-use.patch  1140-image-mediatek-filogic-mt7988a-rfb-05-add-wifi-gen-dtso.patch  1142-image-mediatek-filogic-mt7987a-rfb-02-add-gsw-overlay.patch  1142-image-mediatek-filogic-mt7987a-rfb-03-add-spidev-overlays.patch  1142-image-mediatek-filogic-mt7987a-rfb-06-add-wifi-gen-dtso.patch  1143-image-mediatek-filogic-mt7986a-rfb-01-add-mt7986a-dts-overlay-support.patch  1143-image-mediatek-filogic-mt7986a-rfb-04-add-support-to-build-without-WIFI.patch  1144-image-mediatek-filogic-mt7981-rfb-05-add-support-to-build-without-WIFI.patch  1145-image-mediatek-filogic-add-mkf2fs-dependency-package.patch  1146-image-mediatek-filogic-enable-kmod-mt798x-2p5g-phy.patch  3600-mediatek-filogic-base-files-add-support-for-MediaTek-RBFs-upgrade.patch  3602-mediatek-filogic-base-files-remove-dm-devices-before-upgrade.patch
autobuild/unified/filogic/mac80211/24.10/: defconfig
autobuild/unified/scripts/: ab-common.sh
feed/app/bspconf/: Makefile
feed/app/bspconf/src/: CMakeLists.txt  blk.c  blk.h  boot_param.c  boot_param.h  bspconf.c  bspconf.h  crc32.c  crc32.h  ubi.c  ubi.h
feed/kernel/crypto-eip/src/: xfrm-offload.c
(+7 files in other folders)
